Separate thread safe from non-thread safe Connection methods ()